--- a/web/lab1/client/package.json
+++ b/web/lab1/client/package.json
@@ -4,10 +4,17 @@
   "main": "index.js",
   "author": "BardinPetr",
   "license": "MIT",
+  "scripts": {
+    "build": "node esbuild.mjs",
+    "run": "node esbuild.mjs"
+  },
   "dependencies": {
     "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "esbuild": "^0.19.2"
+    "esbuild": "^0.19.2",
+    "esbuild-plugin-sass": "^1.0.1",
+    "sass": "^1.66.1",
+    "tmp": "^0.2.1"
   }
 }
