--- a/web/lab1/docker-compose.yml
+++ b/web/lab1/docker-compose.yml
@@ -1,6 +1,16 @@
-version: 3
+version: "3.9"
 
-app:
-  image: .
-  volumes:
-  ports:
+services:
+  app:
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
+    ports:
+      - "8888:80"
+    depends_on:
+      - php
+
+  php:
+    build:
+      context: .
+      dockerfile: php.Dockerfile
