--- a/web/lab1/nginx/default.conf
+++ b/web/lab1/nginx/default.conf
@@ -5,9 +5,8 @@ server {
   index static/index.html;
 
   location ~ \.php$ {
-    root /var/www/html; 
     include fastcgi_params;
     fastcgi_pass php:9000;
-    fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+    fastcgi_param SCRIPT_FILENAME /var/www/html/$fastcgi_script_name;
   }
 }
