--- a/web/lab2/build.gradle
+++ b/web/lab2/build.gradle
@@ -40,6 +40,10 @@ dependencies {
   implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+  implementation 'org.slf4j:slf4j-api:2.0.7'
+  runtimeOnly 'ch.qos.logback:logback-core:1.4.7'
+  runtimeOnly 'ch.qos.logback:logback-classic:1.4.7'
 }
 
 tasks.named("build") { finalizedBy("wildflyDeploy") }
