--- a/web/lab2/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab2/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,12 @@
 		 xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
 		 version="5.0">
 	<module-name>app</module-name>
+	<servlet>
+		<servlet-name>TestServlet</servlet-name>
+		<jsp-file>/index.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServlet</servlet-name>
+		<url-pattern></url-pattern>
+	</servlet-mapping>
 </web-app>
