--- a/web/lab2/build.gradle
+++ b/web/lab2/build.gradle
@@ -23,8 +23,9 @@ tasks.withType(JavaCompile) {
 dependencies {
     compileOnly "jakarta.servlet:jakarta.servlet-api:5.0.0"
     compileOnly "jakarta.mvc:jakarta.mvc-api:2.0.0"
-//    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
     implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
+    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1'
 
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
