--- a/web/lab2/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab2/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		 version="5.0">
 	<module-name>app</module-name>
 
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+	<error-page>
+		<location>/error.jsp</location>
+	</error-page>
 </web-app>
