--- a/web/lab3/build.gradle
+++ b/web/lab3/build.gradle
@@ -25,16 +25,28 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+//  compileOnly 'javax.security.enterprise:javax.security.enterprise-api:1.0'
+
   // WEB
   compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0'
-  compileOnly 'jakarta.faces:jakarta.faces-api:3.0.0'
-  compileOnly 'jakarta.mvc:jakarta.mvc-api:2.0.0'
 
-  //
+  // JSF
+  compileOnly 'jakarta.faces:jakarta.faces-api:3.0.0'
+  implementation 'org.glassfish:jakarta.faces:3.0.3'
+
+  compileOnly 'jakarta.el:jakarta.el-api:4.0.0'
+  implementation 'org.glassfish:jakarta.el:4.0.2'
+
+  implementation 'org.primefaces:primefaces:13.0.0:jakarta'
+
+  // Beans
+  implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0'
+  implementation 'org.jboss.weld.se:weld-se-core:4.0.3.Final'
+//  implementation 'jakarta.annotation:jakarta.annotation-api:2.0.0'
+
+  // validation
   compileOnly 'jakarta.validation:jakarta.validation-api:3.0.0'
-//  compileOnly 'jakarta.json.bind:jakarta.json.bind-api:2.0.0'
-//  compileOnly 'jakarta.json:jakarta.json-api:2.0.1'
-//  compileOnly 'jakarta.security.enterprise:jakarta.security.enterprise-api:2.0.0'
+  implementation 'org.hibernate.validator:hibernate-validator:7.0.5.Final'
 
   // JPA
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
@@ -45,6 +57,7 @@ dependencies {
   implementation "org.slf4j:slf4j-api:2.0.7"
   runtimeOnly "ch.qos.logback:logback-core:1.4.7"
   runtimeOnly "ch.qos.logback:logback-classic:1.4.7"
+
 
   // JWT
   implementation "io.jsonwebtoken:jjwt-api:0.11.5"
@@ -78,5 +91,5 @@ tasks.named("build") { finalizedBy("wildflyDeploy") }
 war {
   exclude("src/**")
   duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
-  dependsOn("yarn_build")
+//  dependsOn("yarn_build")
 }
