--- a/web/lab3/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab3/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,14 @@
 		<servlet-name>jsf</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>nova-dark</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>jakarta.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>/WEB-INF/custom.taglib.xml</param-value>
+	</context-param>	
 </web-app>
