--- a/web/lab3/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab3/src/main/webapp/WEB-INF/web.xml
@@ -20,9 +20,16 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>nova-dark</param-value>
 	</context-param>
-
 	<context-param>
 		<param-name>jakarta.faces.FACELETS_LIBRARIES</param-name>
 		<param-value>/WEB-INF/custom.taglib.xml</param-value>
-	</context-param>	
+	</context-param>
+	<context-param>
+		<param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
+		<param-name>jakarta.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+		<param-value>true</param-value>
+	</context-param>
 </web-app>
