--- a/web/lab3/src/main/webapp/src/package.json
+++ b/web/lab3/src/main/webapp/src/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=debug node esbuild.mjs"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "primeflex": "^3.3.1"
   },
   "devDependencies": {
     "esbuild": "^0.19.2",
