--- a/web/lab3/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab3/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,8 @@
 		<param-name>jakarta.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	<context-param>
+		<param-name>hibernate.validator.fail_fast</param-name>
+		<param-value>true</param-value>
+	</context-param>
 </web-app>
