--- a/web/lab3/build.gradle
+++ b/web/lab3/build.gradle
@@ -52,6 +52,7 @@ dependencies {
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
   implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.1'
   compileOnly 'org.eclipse.persistence:eclipselink:4.0.2'
+  implementation 'com.google.code.gson:gson:2.10.1'
 
   // Logging
   implementation "org.slf4j:slf4j-api:2.0.7"
