WEB-LAB3: page structure

--- a/web/lab3/src/main/webapp/WEB-INF/web.xml
+++ b/web/lab3/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>nova-dark</param-value>
+		<param-value>saga</param-value>
 	</context-param>
 	<context-param>
 		<param-name>jakarta.faces.FACELETS_LIBRARIES</param-name>
