--- a/web/lab3/src/main/webapp/src/package.json
+++ b/web/lab3/src/main/webapp/src/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jquery": "^3.7.1",
+    "primefaces": "^13.0.0",
     "primeflex": "^3.3.1"
   },
   "devDependencies": {
