--- a/web/lab3/build.gradle
+++ b/web/lab3/build.gradle
@@ -25,34 +25,25 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-//  compileOnly 'javax.security.enterprise:javax.security.enterprise-api:1.0'
+  // JAKARTA 10 WEB
+  implementation 'jakarta.platform:jakarta.jakartaee-web-api:10.0.0'
+  implementation 'org.glassfish.web:web:10.0-b28'
 
   // WEB
-  compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0'
-
-  // JSF
-  compileOnly 'jakarta.faces:jakarta.faces-api:3.0.0'
-  implementation 'org.glassfish:jakarta.faces:3.0.3'
-
-  compileOnly 'jakarta.el:jakarta.el-api:4.0.0'
-  implementation 'org.glassfish:jakarta.el:4.0.2'
-
   implementation 'org.primefaces:primefaces:13.0.0:jakarta'
 
   // Beans
-  implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0'
-  implementation 'org.jboss.weld.se:weld-se-core:4.0.3.Final'
-  implementation 'jakarta.annotation:jakarta.annotation-api:2.0.0'
+  implementation 'org.jboss.weld.se:weld-se-core:5.1.2.Final'
 
   // validation
-  compileOnly 'jakarta.validation:jakarta.validation-api:3.0.0'
   implementation 'org.hibernate.validator:hibernate-validator:7.0.5.Final'
 
+  // auth
+//  implementation 'org.glassfish.soteria:jakarta.security.enterprise:3.0.3'
+
   // JPA
-  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-  implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.1'
+  implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.2'
   compileOnly 'org.eclipse.persistence:eclipselink:4.0.2'
-  implementation 'com.google.code.gson:gson:2.10.1'
 
   // Logging
   implementation "org.slf4j:slf4j-api:2.0.7"
