OPI3: all tasks except tests

--- a/web/lab3/build.gradle
+++ b/web/lab3/build.gradle
@@ -1,12 +1,14 @@
 plugins {
-    id "java"
-    id "war"
     id "mx.com.inftel.wildfly" version "1.0.2"
     id "com.github.node-gradle.node" version "7.0.0"
 }
 
 group "ru.bardinpetr.itmo"
 version "0.3"
+
+node {
+    nodeProjectDir.set(file("${project.projectDir}/src/main/webapp/src"))
+}
 
 repositories {
     mavenCentral()
@@ -16,121 +18,203 @@ repositories {
 ext {
     junit_ver = "5.9.1"
 
-}
+    srcDir = findProperty('srcDir') ?: 'src'
 
-sourceCompatibility = "17"
-targetCompatibility = "17"
+    javaDir = findProperty('javaDir') ?: System.getenv('JAVA_HOME')
+    compileFlags = findProperty('compileFlags') ?: ''
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    mainClassesDir = layout.buildDirectory.dir("tmp/WEB-INF/classes").get()
+    testClassesDir = layout.buildDirectory.dir("test/classes").get()
+
+    javadocDir = layout.buildDirectory.dir("docs").get()
 }
 
 configurations {
-    tst {
-        extendsFrom configurations.runtimeClasspath
+    javaLib
+    testLib {
+        extendsFrom configurations.javaLib
     }
+    testRuntime
 }
 
 dependencies {
     // JAKARTA 10 WEB
-    implementation "jakarta.platform:jakarta.jakartaee-web-api:10.0.0"
-    implementation "org.glassfish.web:web:10.0-b28"
+    javaLib "jakarta.platform:jakarta.jakartaee-web-api:10.0.0"
+    javaLib "org.glassfish.web:web:10.0-b28"
 
     // WEB
-    implementation "org.primefaces:primefaces:13.0.0:jakarta"
-    implementation "org.jboss.weld.se:weld-se-core:5.1.2.Final"
+    javaLib "org.primefaces:primefaces:13.0.0:jakarta"
+    javaLib "org.jboss.weld.se:weld-se-core:5.1.2.Final"
 
     // validation
-    implementation "org.hibernate.validator:hibernate-validator:7.0.5.Final"
+    javaLib "org.hibernate.validator:hibernate-validator:7.0.5.Final"
 
     // JPA
-    implementation "org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.2"
-    compileOnly "org.eclipse.persistence:eclipselink:4.0.2"
+    javaLib "org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.2"
+    javaLib "org.eclipse.persistence:eclipselink:4.0.2"
 
     // Logging
-    implementation "org.slf4j:slf4j-api:2.0.7"
-    runtimeOnly "ch.qos.logback:logback-core:1.4.7"
-    runtimeOnly "ch.qos.logback:logback-classic:1.4.7"
+    javaLib "org.slf4j:slf4j-api:2.0.7"
+    javaLib "ch.qos.logback:logback-core:1.4.7"
+    javaLib "ch.qos.logback:logback-classic:1.4.7"
 
     // JWT
-    implementation "io.jsonwebtoken:jjwt-api:0.11.5"
-    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
-    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
+    javaLib "io.jsonwebtoken:jjwt-api:0.11.5"
+    javaLib "io.jsonwebtoken:jjwt-impl:0.11.5"
+    javaLib "io.jsonwebtoken:jjwt-jackson:0.11.5"
 
     // Tests
-    implementation "org.junit.jupiter:junit-jupiter-api:${junit_ver}"
-    implementation "org.junit.jupiter:junit-jupiter-engine:${junit_ver}"
-    implementation "org.junit.jupiter:junit-jupiter:${junit_ver}"
-    implementation 'org.assertj:assertj-core:3.4.1'
+    testLib "org.junit.jupiter:junit-jupiter-api:${junit_ver}"
+    testLib "org.junit.jupiter:junit-jupiter-engine:${junit_ver}"
+//    testLib "org.junit.jupiter:junit-jupiter:${junit_ver}"
+    testLib 'org.assertj:assertj-core:3.4.1'
 
-    tst 'org.junit.platform:junit-platform-console-standalone:1.11.0-M1'
+//    testRuntime 'org.junit.platform:junit-platform-console-standalone:1.11.0-M1'
 }
 
+tasks.register('clean', Delete) {
+    delete buildDir
+}
+
+tasks.register('compileSrc', Exec) {
+    println "use javac dir ${javaDir} and additional flags ${compileFlags}"
+    def commandd = [
+            "${javaDir}/bin/javac",
+            '-cp', configurations.javaLib.asPath,
+            '-d', mainClassesDir,
+    ]
+
+    if (!compileFlags.empty) {
+        commandd.addAll(compileFlags)
+    }
+    commandLine = commandd
+
+    def sourceFiles = fileTree(dir: "${srcDir}/main/java/")
+    sourceFiles.include('**/*.java')
+    sourceFiles.each { File file ->
+        args file
+    }
+}
+
+tasks.register('compileTest', Exec) {
+    dependsOn('compileSrc')
+
+    def classpath = configurations.testLib.asPath + ":" + mainClassesDir
+    commandLine = [
+            "${javaDir}/bin/javac",
+            '-cp', classpath,
+            '-d', testClassesDir
+    ]
+    fileTree(dir: "${srcDir}/test/java/")
+            .matching { include('**/*.java') }
+            .forEach { File file ->
+                args file
+            }
+}
+
+tasks.register("native2ascii", Native2ASCIITask) {
+    dependsOn("cpRes")
+    inputDir = layout.buildDirectory.dir("tmp/WEB-INF/classes").get()
+}
+
+tasks.register('cpRes', Copy) {
+    from "${srcDir}/main/resources/"
+    includeEmptyDirs = false
+    exclude '**/*.java'
+    into "${buildDir}/tmp/WEB-INF/classes/"
+}
+
+tasks.register('cpView', Copy) {
+    from "${srcDir}/main/webapp/"
+    into "${buildDir}/tmp/"
+    exclude "src/"
+}
+
+tasks.register('cpLib', Copy) {
+    from configurations.javaLib.files
+    into "${buildDir}/tmp/WEB-INF/lib"
+}
+
+tasks.register('createManifest') {
+    doLast {
+        def hashes = HashHelper.generateManifestHashes(mainClassesDir)
+
+        project.mkdir("${buildDir}/tmp/META-INF/")
+
+        file("${buildDir}/tmp/META-INF/MANIFEST.MF")
+                .text = "Manifest-Version: 1.0\n\n${hashes}\n"
+    }
+}
+
+tasks.register('doc', Copy) {
+    dependsOn('createManifest', 'javadocCompile')
+
+    from javadocDir
+    into "${buildDir}/tmp/docs/"
+}
+
+tasks.register("war", Zip) {
+    dependsOn('compileSrc', 'cpRes', 'cpView', 'cpLib', 'doc', 'native2ascii')
+
+    from "${buildDir}/tmp/"
+    archiveFileName = "${srcDir}.war"
+    destinationDirectory = file("${buildDir}/dist")
+}
+
+tasks.register("music", MusicTask) {
+    dependsOn("war")
+    music = file("buildSrc/src/main/resources/ding.mp3")
+}
+
+tasks.register("javadocCompile", JavadocTask) {
+    classpath = configurations.javaLib.asPath
+    buildDir = javadocDir
+    sourceDir = layout.projectDirectory.dir("src/main")
+    arguments = ['-quiet', '-Xdoclint:-missing']
+}
+
+tasks.register("javadocZip", Zip) {
+    dependsOn('javadocCompile')
+
+    from javadocDir
+    archiveFileName = "docs.zip"
+    destinationDirectory = layout.buildDirectory.get()
+}
+
+//tasks.register("tst", JUnitTask) {
+//    dependsOn("compileTest")
+//
+//    configuration = configurations.testLib
+//    sourceClassesDir = mainClassesDir
+//    testClassesDir = testClassesDir
+//    reportDir = layout.buildDirectory.dir("report").get()
+//}
+
+//tasks.register("report", ReportPusherTask) {
+//    dependsOn("tst")
+//
+//    reportBuildDirectory = layout.buildDirectory.dir('report')
+//    reportStoreDirectory = layout.projectDirectory.dir('reports')
+//}
+
+tasks.register("teamsrc", TeamTask)
+
+tasks.register("team", Zip) {
+    dependsOn('teamsrc')
+
+    from layout.buildDirectory.dir("team").get()
+    archiveFileName = "team.zip"
+    destinationDirectory = layout.buildDirectory.get()
+}
+
+/* Deploy */
 wildfly {
     controller = "remote+http://localhost:59883"
     username = "admin"
     password = "1234"
-    deployment = "build/libs/${rootProject.name}-${version}.war"
+    deployment = "build/dist/src.war"
     persistent = false
 }
-
-node {
-    nodeProjectDir.set(file("${project.projectDir}/src/main/webapp/src"))
-}
-
 tasks.named("wildflyDeploy") {
-    dependsOn("build")
-}
-
-war {
-    exclude("src/**")
-    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
-    dependsOn("yarn_build")
-}
-
-tasks.register("native2ascii", Native2ASCIITask) {
-//    dependsOn("")
-
-    inputDir = layout.buildDirectory.dir("resources")
-}
-
-tasks.register("music", MusicTask) {
-    dependsOn("build")
-
-    music = file("buildSrc/src/main/resources/ding.mp3")
-}
-
-tasks.register("jd", JavadocTask) {
-    classpath = configurations.runtimeClasspath.asPath
-    buildDir = layout.buildDirectory.dir("docs").get()
-    sourceDir = layout.projectDirectory.dir("src")
-    arguments = ['-quiet', '-Xdoclint:-missing']
-}
-
-tasks.register("tst", JUnitTask) {
-    configuration = configurations.tst
-    sourceClassesDir = layout.buildDirectory.dir('classes/java/main').get()
-    testClassesDir = layout.buildDirectory.dir('classes/java/test').get()
-    reportDir = layout.buildDirectory.dir("report").get()
-
-    dependsOn("classes", "testClasses")
-}
-
-tasks.register("manifestChecksums") {
-    dependsOn("classes")
-
-    def classesDir = layout.buildDirectory.dir('classes/java/main').get()
-
-    def hashes = HashHelper.generateManifestHashes(classesDir)
-    println(hashes)
-}
-
-tasks.register("report", ReportPusherTask) {
-    dependsOn("tst")
-
-    reportBuildDirectory = layout.buildDirectory.dir('report')
-    reportStoreDirectory = layout.projectDirectory.dir('reports')
-}
-
-tasks.register("team", TeamTask) {
+    dependsOn("war")
 }
